--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet",
-    "start": "webpack-serve --config example/webpack.config.js",
+    "start": "webpack-serve --config example/webpack.config.js --port 1111",
     "build": "tsc",
     "prepublish": "yarn build"
   },
