--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "static": "example/dist"
   },
   "dependencies": {
+    "@mdi/js": "^5.8.55",
     "copy-to-clipboard": "^3.0.8",
     "lodash": "^4.17.11",
     "markdown-it-container": "^3.0.0",
