--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rich-markdown-editor",
   "description": "A rich text editor with Markdown shortcuts",
   "version": "11.0.11",
-  "main": "src/index.js",
-  "typings": "src/index.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "license": "BSD-3-Clause",
   "funding": "https://github.com/sponsors/outline",
   "scripts": {
