--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r-m-e",
+  "name": "@4giving/r-m-e",
   "description": "A rich text editor with Markdown shortcuts",
   "version": "1.0.0",
   "main": "dist/index.js",
