--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@4giving/r-m-e",
-  "description": "A rich text editor with Markdown shortcuts",
-  "version": "1.0.0",
+  "description": "A modified rich markdown editor",
+  "version": "1.1.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "BSD-3-Clause",
@@ -20,7 +20,6 @@
     "@mdi/js": "^5.8.55",
     "copy-to-clipboard": "^3.0.8",
     "lodash": "^4.17.11",
-    "markdown-it-container": "^3.0.0",
     "outline-icons": "^1.21.0",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-dropcursor": "^1.3.2",
@@ -32,6 +31,7 @@
     "prosemirror-model": "^1.11.2",
     "prosemirror-schema-list": "^1.1.2",
     "prosemirror-state": "^1.3.3",
+    "prosemirror-tables": "^1.1.1",
     "prosemirror-utils": "^0.9.6",
     "prosemirror-view": "^1.16.1",
     "react-medium-image-zoom": "^3.0.16",
