--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@4giving/r-m-e",
   "description": "A modified rich markdown editor",
-  "version": "1.4.3",
+  "version": "1.4.5",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "BSD-3-Clause",
@@ -17,26 +17,26 @@
     "static": "example/dist"
   },
   "dependencies": {
-    "@mdi/js": "^5.8.55",
+    "@mdi/js": "^6.1.95",
     "copy-to-clipboard": "^3.0.8",
     "lodash": "^4.17.11",
-    "prosemirror-commands": "^1.1.4",
-    "prosemirror-dropcursor": "^1.3.2",
-    "prosemirror-gapcursor": "^1.1.5",
-    "prosemirror-history": "^1.1.3",
+    "prosemirror-commands": "^1.1.12",
+    "prosemirror-dropcursor": "^1.4.0",
+    "prosemirror-gapcursor": "^1.2.0",
+    "prosemirror-history": "^1.2.0",
     "prosemirror-inputrules": "^1.1.3",
-    "prosemirror-keymap": "^1.1.4",
-    "prosemirror-markdown": "^1.4.4",
-    "prosemirror-model": "^1.11.2",
-    "prosemirror-schema-list": "^1.1.2",
-    "prosemirror-state": "^1.3.3",
+    "prosemirror-keymap": "^1.1.5",
+    "prosemirror-markdown": "1.6.0",
+    "prosemirror-model": "^1.15.0",
+    "prosemirror-schema-list": "^1.1.6",
+    "prosemirror-state": "^1.3.4",
     "prosemirror-tables": "^1.1.1",
     "prosemirror-utils": "^0.9.6",
-    "prosemirror-view": "^1.16.1",
+    "prosemirror-view": "^1.23.3",
     "react-portal": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
-    "slugify": "^1.4.0",
-    "smooth-scroll-into-view-if-needed": "^1.1.27",
+    "slugify": "^1.6.3",
+    "smooth-scroll-into-view-if-needed": "^1.1.32",
     "typescript": "3.7.5"
   },
   "peerDependencies": {
