--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,15 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
-    "module": "commonjs",
-    "target": "es2017",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": [
+      "es2017",
+      "es7",
+      "es6",
+      "dom"
+    ],
     "jsx": "react",
     "types": [
       "react"
