Revert "editor updates"
This reverts commit 1294f4c24b827c21de5f178d971867f7a829772f.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,8 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "lib": [
-      "es2017",
-      "es7",
-      "es6",
-      "dom"
-    ],
+    "module": "commonjs",
+    "target": "es2017",
     "jsx": "react",
     "types": [
       "react"
